[package]
name = "diceware"
version = "0.1.2"
authors = ["Vladimir Timofeenko <public@vtimofeenko.com>"]
license = "WTFPL"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chbs = "0.1.0"
clap = { version = "4.3.10", features = ["derive"] }
